// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Пути устанавливает srcSet и src есть переданы размеры 1`] = `
<div
  className="AmpImage"
>
  <amp-img
    height={900}
    src="picture-of-cat"
    srcSet="picture-of-cat 320w,picture-of-cat 1200w"
    width={1200}
  />
</div>
`;

exports[`рендерит картинку с переданными src, attributes, imageAttributes, className 1`] = `
<div
  className="AmpImage Test"
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <amp-img
    class="Test__image"
    height={1080}
    sizes="100px"
    src="picture-of-cat"
    srcSet="picture-of-cat 320w,picture-of-cat 1200w"
    width={1920}
  />
</div>
`;
